# suco

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.de.md  README.md  brain-claude.md  brain-win.md  dashboard.html  generate_benchmark.ps1  install.ps1  install.sh  run_massive_benchmark.ps1  run_massive_benchmark.sh  test.cpp
.github/workflows/: ci.yml  release-apt.yml  release-windows.yml
cmake/: SUCO.cmake
debian/: changelog  control  copyright  postinst  rules
debian/source/: options
docs/: BENCHMARK.md  INSTALL-apt.md  INSTALL.md  PPA.md  ROADMAP.md  SUCO_INTEGRATION.md  VSCODE_INTEGRATION.md  daemon_mode_design.md  remote_preprocessing_design.md  security_auth.md  suco_run_design.md  t11_dashboard_design.md  t12_scaling_design.md  t16_scheduler_fixes_design.md  t2_zstd_design.md  t3_path_normalization_design.md
k8s/: helper-daemonset.yaml  redis-master.yaml
packaging/debian/: postinst  prerm
packaging/systemd/: suco-coordinator.service  suco-worker.service
packaging/windows/: suco.nsi
scripts/: bench_cold.sh  bench_grid.sh  build_apt_repo.sh  make_ppa_source.sh  suco_clean_compile_commands
src/client/: batch_collector.cpp  batch_collector.h  batch_sender.cpp  batch_sender.h  client_config.cpp  client_config.h  compiler_command.cpp  compiler_command.h  header_set_hasher.cpp  header_set_hasher.h  job_queue.cpp  job_queue.h  job_sender.cpp  job_sender.h  local_compiler.cpp  local_compiler.h  local_prep_cache.cpp  local_prep_cache.h  local_slot_arbiter.h  logging.cpp  logging.h  main.cpp  network_client.cpp  network_client.h  pipeline_orchestrator.cpp  pipeline_orchestrator.h  preprocessing_pool.cpp  preprocessing_pool.h  suco_client.cpp  suco_client.h  toolchain_packer.cpp  toolchain_packer.h  utils.cpp  utils.h
src/common/: hash_util.cpp  hash_util.h  ipc_protocol.h  logging.cpp  logging.h  msvc_detector.cpp  msvc_detector.h  platform_compat.h  protocol.h  socket_util.h  tls_util.cpp  tls_util.h  version.h.in  version_utils.h  zstd_util.cpp  zstd_util.h
src/coordinator/: batch_processor.cpp  batch_processor.h  client_handler.cpp  client_handler.h  config.cpp  config.h  coordinator.cpp  coordinator.h  coordinator_types.h  history_writer.cpp  history_writer.h  job.h  job_queue.cpp  job_queue.h  lru_cache.h  main.cpp  network_server.cpp  network_server.h  scheduler.cpp  scheduler.h  worker_handler.cpp  worker_handler.h  worker_manager.cpp  worker_manager.h
src/daemon/: main.cpp
src/helper/: main.cpp  web_server.h
src/suco_trace/: suco_trace.c
src/suco_wrapper/: main.cpp
src/worker/: config.cpp  config.h  header_cache.cpp  header_cache.h  heartbeat_manager.cpp  heartbeat_manager.h  job_executor.cpp  job_executor.h  main.cpp  metrics.cpp  metrics.h  network_client.cpp  network_client.h  toolchain_detector.cpp  toolchain_detector.h  toolchain_manager.cpp  toolchain_manager.h  worker.cpp  worker.h
tests/: cache_correctness_test.sh  chaos_test.sh  ci_smoke_test.sh
